# ZilchShadersSamples

./: .gitmodules  CMakeLists.txt
Applications/: CMakeLists.txt
Applications/SimpleDemo1/: CMakeFiles.cmake  CMakeLists.txt  main.cpp
Applications/TestBed/: CMakeLists.txt
Applications/TestBed/Framework/: Application.cpp  Application.hpp  BuildConfig.data  CMakeFiles.cmake  CMakeLists.txt  Camera.cpp  Camera.hpp  FrameworkStandard.hpp  FrameworkZilchShaderGlslBackend.cpp  FrameworkZilchShaderGlslBackend.hpp  ImGuiHelper.cpp  ImGuiHelper.hpp  JsonSerializer.cpp  JsonSerializer.hpp  Keyboard.cpp  Keyboard.hpp  Level.cpp  Level.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Mouse.cpp  Mouse.hpp  ObjReader.cpp  ObjReader.hpp  OpenGlRenderer.cpp  OpenGlRenderer.hpp  Project.cpp  Project.hpp  Properties.cpp  Properties.hpp  Renderer.cpp  Renderer.hpp  SDL.cpp  SDL.hpp  Serializer.cpp  Serializer.hpp  (+5 more)
Libraries/: CMakeLists.txt
Libraries/DemoUtilities/: CMakeFiles.cmake  CMakeLists.txt  Callbacks.cpp  Callbacks.hpp  DemoUtilitiesStandard.hpp  Helpers.cpp  Helpers.hpp  Precompiled.hpp  ShaderSerialization.cpp  ShaderSerialization.hpp
Libraries/Engine/: CMakeFiles.cmake  CMakeLists.txt  Cog.cpp  Cog.hpp  Component.cpp  Component.hpp  Composition.cpp  Composition.hpp  CompositionInitializer.hpp  EngineStandard.hpp  Enums.hpp  JsonSerializer.cpp  JsonSerializer.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  Precompiled.hpp  Resource.cpp  Resource.hpp  ResourceSystem.cpp  ResourceSystem.hpp  Serializer.cpp  Serializer.hpp  Space.cpp  Space.hpp  Transform.cpp  Transform.hpp
Libraries/Graphics/: AppBuiltInTypes.hpp  Buffers.cpp  Buffers.hpp  ByteBuffer.cpp  ByteBuffer.hpp  CMakeFiles.cmake  CMakeLists.txt  Camera.cpp  Camera.hpp  ComputePass.cpp  ComputePass.hpp  FrameworkZilchShaderGlslBackend.cpp  FrameworkZilchShaderGlslBackend.hpp  GraphicsSpace.cpp  GraphicsSpace.hpp  GraphicsStandard.hpp  Material.cpp  Material.hpp  MaterialProperties.cpp  MaterialProperties.hpp  MaterialUniformBufferHelper.cpp  MaterialUniformBufferHelper.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  OpenGlRenderer.cpp  OpenGlRenderer.hpp  Precompiled.hpp  Renderer.cpp  Renderer.hpp  ResourceLibrary.cpp  ResourceLibrary.hpp  ResourceLibrary.inl  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  ShaderProperties.cpp  ShaderProperties.hpp  (+6 more)
Libraries/OpenGLApi/: CMakeFiles.cmake  CMakeLists.txt  OpenGlRenderer.cpp  OpenGlRenderer.hpp  OpenGlStandard.hpp  Precompiled.hpp
Projects/: CMakeLists.txt
Projects/CompositesDemo/: ColorOutput.zilchFrag  Default.material  ImageSampler.zilchFrag  Level1.level  OscillatingImage.material  Quad.mesh  SimpleDiffuse.material  SimpleDiffuse.zilchFrag  SimpleLighting.zilchFrag  UvPan.zilchFrag  UvTimeScale.zilchFrag  VertexApiPerspectivePosition.zilchFrag  VertexTransforms.zilchFrag
Projects/Compute/: Compute.material  Level1.level  ParticleRender.material  ParticleRender.zilchFrag  Points.mesh  SimpleParticleComposited.zilchFrag
Projects/Quads/: Default.material  Level1.level  Level2.level
Shaders/: CMakeLists.txt  Test.txt.in
Shaders/ShaderCore/: CMakeLists.txt  SampledImageExtensions.zilchFrag  ShaderLanguages.zilchFrag
Shaders/TestShaders/: CMakeLists.txt  Pixel.glsl  Pixel.zilchFrag  SimpleParticleComposited.zilchFrag  Vertex.glsl  Vertex.zilchFrag
